--- a/_includes/components/indicator/metadata.html
+++ b/_includes/components/indicator/metadata.html
@@ -1,5 +1,5 @@
 <div class="accordion" id="accordionExample">
-  <div class="accordion_item">
+  <div class="accordion-item">
     <h2 class="accordion-header" id="headingOne">
       <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
         Indicator information
@@ -24,7 +24,7 @@
       </div>
     </div>
   </div>
-  <div class="accordion_item">
+  <div class="accordion-item">
     <h2 class="accordion-header" id="headingTwo">
       <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
         Definition, concepts, and classifications 
@@ -81,7 +81,7 @@
       </div>
     </div>
   </div>
-  <div class="accordion_item">
+  <div class="accordion-item">
     <h2 class="accordion-header" id="headingThree">
       <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
         Data source type and data collection method
@@ -118,7 +118,7 @@
       </div>
     </div>
   </div>
-  <div class="accordion_item">
+  <div class="accordion-item">
     <h2 class="accordion-header" id="headingFour">
       <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
         Indicator information
@@ -175,7 +175,7 @@
       </div>
     </div>
   </div>
-  <div class="accordion_item">
+  <div class="accordion-item">
     <h2 class="accordion-header" id="headingFive">
       <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="true" aria-controls="collapseFive">
         Other methodological considerations
@@ -247,7 +247,7 @@
       </div>
     </div>
   </div>
-  <div class="accordion_item">
+  <div class="accordion-item">
     <h2 class="accordion-header" id="headingSix">
       <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="true" aria-controls="collapseSix">
         Data availability and disaggregation
@@ -299,7 +299,7 @@
       </div>
     </div>
   </div>
-  <div class="accordion_item">
+  <div class="accordion-item">
     <h2 class="accordion-header" id="headingEight">
       <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEight" aria-expanded="true" aria-controls="collapseEight">
         References and documentation
