--- a/_includes/components/indicator/metadata.html
+++ b/_includes/components/indicator/metadata.html
@@ -1,4 +1,5 @@
 <div class="accordion" id="accordionExample">
+  <button class="toggle-all-btn" id="toggleAll">Show all</button>
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingOne">
       <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
@@ -326,3 +327,17 @@
     </div>
   </div>
 </div>
+
+<script>
+  $("#toggleAll").click( function() {
+    let button = document.getElementById("toggleAll");
+    if(!$('.accordion-header').hasClass("active")){
+        $('.accordion-header').removeClass("active").addClass("active");
+        button.innerHTML = 'Hide all'
+
+    } else {
+        $('.accordion-header').addClass("active").removeClass("active");
+        button.innerHTML = 'Show all'
+    }
+});
+</script>
