--- a/_includes/components/indicator/metadata.html
+++ b/_includes/components/indicator/metadata.html
@@ -328,7 +328,7 @@
   </div>
 </div>
 
-<script>
+<script type="text/javascript">
   $("#toggleAll").click( function() {
     let button = document.getElementById("toggleAll");
     if(!$('.accordion-header').hasClass("active")){
