--- a/_layouts/indicator.html
+++ b/_layouts/indicator.html
@@ -21,6 +21,7 @@
   {% include components/indicator/indicator-progress.html %}
   {% include components/indicator/indicator-content.html %}
   {% include components/indicator/indicator-main.html %}
+  {% include components/indicator/metadata.html %}
   {% include back-to-top.html %}
 </div>
 
