--- a/_includes/components/indicator/metadata.html
+++ b/_includes/components/indicator/metadata.html
@@ -6,7 +6,7 @@
         Indicator information
       </button>
     </h2>
-    <div id="collapseOne" class="accordion-collapse collapsed" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+    <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
       <div class="accordion-body">
         <dl>
           <dt>Goal</dt>
@@ -31,7 +31,7 @@
         Definition, concepts, and classifications 
       </button>
     </h2>
-    <div id="collapseTwo" class="accordion-collapse collapses" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
       <div class="accordion-body">
         <table>
           <thead>
@@ -88,7 +88,7 @@
         Data source type and data collection method
       </button>
     </h2>
-    <div id="collapseThree" class="accordion-collapse collapsed" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
       <div class="accordion-body">
         <table>
           <thead>
@@ -125,7 +125,7 @@
         Indicator information
       </button>
     </h2>
-    <div id="collapseFour" class="accordion-collapse collapsed" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+    <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
       <div class="accordion-body">
         <table>
           <thead>
@@ -182,7 +182,7 @@
         Other methodological considerations
       </button>
     </h2>
-    <div id="collapseFive" class="accordion-collapse collapsed" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
+    <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
       <div class="accordion-body">
         <table>
           <thead>
@@ -254,7 +254,7 @@
         Data availability and disaggregation
       </button>
     </h2>
-    <div id="collapseSix" class="accordion-collapse collapsed" aria-labelledby="headingSix" data-bs-parent="#accordionExample">
+    <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#accordionExample">
       <div class="accordion-body">
         <table>
           <thead>
@@ -280,7 +280,7 @@
         Comparability/deviation from international standards
       </button>
     </h2>
-    <div id="collapseSeven" class="accordion-collapse collapsed" aria-labelledby="headingSeven" data-bs-parent="#accordionExample">
+    <div id="collapseSeven" class="accordion-collapse collapse" aria-labelledby="headingSeven" data-bs-parent="#accordionExample">
       <div class="accordion-body">
         <table>
           <thead>
@@ -306,7 +306,7 @@
         References and documentation
       </button>
     </h2>
-    <div id="collapseEight" class="accordion-collapse collapsed" aria-labelledby="headingEight" data-bs-parent="#accordionExample">
+    <div id="collapseEight" class="accordion-collapse collapse" aria-labelledby="headingEight" data-bs-parent="#accordionExample">
       <div class="accordion-body">
         <table>
           <thead>
