--- a/_includes/components/indicator/metadata.html
+++ b/_includes/components/indicator/metadata.html
@@ -274,7 +274,7 @@
       </div>
     </div>
   </div>
-  <div class="accordion_item">
+  <div class="accordion-item">
     <h2 class="accordion-header" id="headingSeven">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
         Comparability/deviation from international standards
