--- a/_includes/components/indicator/metadata.html
+++ b/_includes/components/indicator/metadata.html
@@ -1,5 +1,5 @@
 <div class="accordion" id="accordionExample">
-  <button class="toggle-all-btn" id="toggleAll">Show all</button>
+  <button class="btn btn-toggle-all" id="toggleAll">Show all</button>
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingOne">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
