--- a/_includes/components/indicator/metadata.html
+++ b/_includes/components/indicator/metadata.html
@@ -2,7 +2,7 @@
   <h3>Indicator metadata</h3>
   <p>This section provides metadata for the data reported for this indicator at the national level and at the global level.</p>
   <div class="accordion" id="accordionExample">
-    <button class="btn btn-primary btn-toggle-all" id="toggleAll">Show all sections</button>
+    <button class="btn btn-primary btn-toggle-all" id="toggleAll"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i> Show all sections</button>
     <div class="accordion-item">
       <h2 class="accordion-header" id="headingOne">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
@@ -339,11 +339,11 @@
       let button = document.getElementById("toggleAll");
       if(!$('.accordion-button').hasClass("active")){
           $('.accordion-button').removeClass("active").addClass("active");
-          button.innerHTML = 'Hide all'
+          button.innerHTML = '<i class="fa fa-chevron-circle-up" aria-hidden="true"></i> Hide all sections'
 
       } else {
           $('.accordion-button').addClass("active").removeClass("active");
-          button.innerHTML = 'Show all sections'
+          button.innerHTML = '<i class="fa fa-chevron-circle-down" aria-hidden="true"></i> Show all sections'
       }
     });
   });
