--- a/_includes/components/indicator/metadata.html
+++ b/_includes/components/indicator/metadata.html
@@ -333,7 +333,7 @@
 <div>
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-< !╌ <script type="text/javascript">
+<script type="text/javascript">
   $(document).ready(function(){
     $("#toggleAll").click( function() {
       let button = document.getElementById("toggleAll");
