--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -1,5 +1,9 @@
 // Enter any custom Sass in this file.
 
+btn-toggle-all {
+    margin-bottom: 20px;
+}
+
 .accordion-header {
     margin-bottom: 0;
     margin-top: 0;
