--- a/_includes/components/indicator/metadata.html
+++ b/_includes/components/indicator/metadata.html
@@ -39,9 +39,9 @@
           <table>
             <thead>
               <tr>
-                <th scope="col">Field</th>
-                <th scope="col">National</th>
-                <th scope="col">Global</th>
+                <th scope="col" style="width: 10%;">Field</th>
+                <th scope="col" style="width: 45%;">National</th>
+                <th scope="col" style="width: 45%;">Global</th>
               </tr>
             </thead>
             <tbody>
@@ -96,9 +96,9 @@
           <table>
             <thead>
               <tr>
-                <th scope="col">Field</th>
-                <th scope="col">National</th>
-                <th scope="col">Global</th>
+                <th scope="col" style="width: 10%;">Field</th>
+                <th scope="col" style="width: 45%;">National</th>
+                <th scope="col" style="width: 45%;">Global</th>
               </tr>
             </thead>
             <tbody>
@@ -133,9 +133,9 @@
           <table>
             <thead>
               <tr>
-                <th scope="col">Field</th>
-                <th scope="col">National</th>
-                <th scope="col">Global</th>
+                <th scope="col" style="width: 10%;">Field</th>
+                <th scope="col" style="width: 45%;">National</th>
+                <th scope="col" style="width: 45%;">Global</th>
               </tr>
             </thead>
             <tbody>
@@ -190,9 +190,9 @@
           <table>
             <thead>
               <tr>
-                <th scope="col">Field</th>
-                <th scope="col">National</th>
-                <th scope="col">Global</th>
+                <th scope="col" style="width: 10%;">Field</th>
+                <th scope="col" style="width: 45%;">National</th>
+                <th scope="col" style="width: 45%;">Global</th>
               </tr>
             </thead>
             <tbody>
@@ -262,8 +262,8 @@
           <table>
             <thead>
               <tr>
-                <th scope="col">National</th>
-                <th scope="col">Global</th>
+                <th scope="col" style="width: 50%;">National</th>
+                <th scope="col" style="width: 50%;">Global</th>
               </tr>
             </thead>
             <tbody>
@@ -288,8 +288,8 @@
           <table>
             <thead>
               <tr>
-                <th scope="col">National</th>
-                <th scope="col">Global</th>
+                <th scope="col" style="width: 50%;">National</th>
+                <th scope="col" style="width: 50%;">Global</th>
               </tr>
             </thead>
             <tbody>
@@ -314,8 +314,8 @@
           <table>
             <thead>
               <tr>
-                <th scope="col">National</th>
-                <th scope="col">Global</th>
+                <th scope="col" style="width: 50%;">National</th>
+                <th scope="col" style="width: 50%;">Global</th>
               </tr>
             </thead>
             <tbody>
