--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -1,12 +1,21 @@
 // Enter any custom Sass in this file.
 
+table {
+  border: 1px solid #dee2e6;
+}
+  
+table td {
+  border: 1px solid #dee2e6;
+  padding: 10px;
+}
+
 .btn-toggle-all {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .accordion-header {
-    margin-bottom: 0;
-    margin-top: 0;
+  margin-bottom: 0;
+  margin-top: 0;
 }
 
 #fields .variable-selector[data-field="Reporting type"] {
