--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -9,6 +9,11 @@ table td {
   padding: 10px;
 }
 
+table th {
+  border: 1px solid #dee2e6;
+  padding: 10px;
+}
+
 .btn-toggle-all {
   margin-bottom: 20px;
 }
