--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -7,6 +7,7 @@
 .accordion-body > table td {
   border: 1px solid #dee2e6;
   padding: 10px;
+  vertical-align: top;
 }
 
 .accordion-body > table th {
