--- a/_includes/components/indicator/categories-template.html
+++ b/_includes/components/indicator/categories-template.html
@@ -1,5 +1,6 @@
 <script type="text/template" id="categories_template">
   <h4>Sub-categories</h4>
+  <p>Choose a sub-category from the dropdown below to compare national and global data for that group.
   <select class="select" id="category-select" name="category-select">
     <option value="total" data-field="total" selected>Headline</option>
 		<% _.each(fields, function(fieldItem) { %>
