--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -208,4 +208,12 @@ body.contrast-high {
     border-color: #FFFFFF;
   }
   
+  .accordion-item {
+    border: 1px solid #FFFFFF;
+    background-color: #000;
+  }
+  
+  .accordion-button {
+    background-color: #000;
+  }
 }
