--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -194,7 +194,7 @@ input, button, select, optgroup, textarea {
 
 body.contrast-high {
   .toggle-switch-check:checked ~ .toggle-switch-bar::before {
-    background-color: #FFFFFF;
+    background-color: #FFFFFF !important;
     border-color: #FFFFFF;
 }
   
@@ -217,4 +217,15 @@ body.contrast-high {
     color: #fff;
     background-color: #000;
   }
+  
+  .accordion-button.collapsed::after {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+   }
+  
+  .accordion-button::after {
+    background-image: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23212529'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e);
+  }
+  
+  
+}
 }
